--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "module": "commonjs",
     "target": "es5",
+    "lib": ["es2019"],
     "sourceMap": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
