--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -5,7 +5,7 @@
   "author": "Lev Stambler <levstamb@gmail.com>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/interfaces.ts",
+  "main": "lib/index.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,5 +15,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.5.7"
   }
 }
