--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interfaces",
+  "name": "@foodmedicine/interfaces",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Lev Stambler <levstamb@gmail.com>",
