--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
-  "name": "@foodmedicine/root",
-  "private": true,
+  "name": "foodmedicine",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "scrape:all": "lerna run --scope @foodmedicine/healthsitescraper run:all"
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "nx migrate latest",
+    "workspace-schematic": "nx workspace-schematic",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help"
   },
-  "devDependencies": {
-    "@types/assert": "^1.4.7",
-    "@types/cheerio": "^0.22.18",
-    "@types/mocha": "^7.0.2",
-    "assert": "^2.0.0",
-    "lerna": "^3.22.0",
-    "mocha": "^7.2.0",
-    "nodemon": "^2.0.4"
-  },
+  "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "node-fetch": "^2.6.0"
   },
-  "workspaces": {
-    "packages": [
-      "packages/health-site-scraper/*",
-      "packages/interfaces/*",
-      "packages/scholars-scraper"
-    ]
+  "devDependencies": {
+    "@nrwl/node": "9.3.0",
+    "@nrwl/workspace": "9.3.0",
+    "@types/node": "~8.9.4",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "prettier": "2.0.4",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.8.3",
+    "@nrwl/jest": "9.3.0",
+    "jest": "25.2.3",
+    "@types/jest": "25.1.4",
+    "ts-jest": "25.2.1",
+    "@nrwl/eslint-plugin-nx": "9.3.0",
+    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "eslint-config-prettier": "6.0.0"
   }
 }
