--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": ".",
-    "module": "commonjs",
-    "target": "es5",
-    "lib": ["es2019"],
+    "rootDir": ".",
     "sourceMap": true,
-    "alwaysStrict": true,
-    "noImplicitAny": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2019", "dom"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
     "paths": {
-      "@foodmedicine/*": ["packages/*/lib"]
+      "@foodmedicine/interfaces": ["libs/interfaces/src/index.ts"],
+      "@foodmedicine/scraper": ["libs/scraper/src/index.ts"]
     }
   },
-
-  "compileOnSave": true,
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "tmp"]
 }
