--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "9.3.0",
