--- a/nx.json
+++ b/nx.json
@@ -22,7 +22,7 @@
     "health-site-scraper": {
       "tags": []
     },
-    "google-scholars-scraper": {
+    "scholars-scraper": {
       "tags": []
     },
     "interfaces": {
