--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "fs": "0.0.1-security",
     "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23"
   },
