--- a/nx.json
+++ b/nx.json
@@ -14,12 +14,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -44,6 +39,13 @@
     },
     "parse-rated-paragraphs": {
       "tags": []
+    },
+    "table-frontend": {
+      "tags": []
+    },
+    "table-frontend-e2e": {
+      "tags": [],
+      "implicitDependencies": ["table-frontend"]
     }
   }
 }
