--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
     "fs": "0.0.1-security",
     "natural": "^2.1.5",
     "node-fetch": "^2.6.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "document-register-element": "1.13.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-router-dom": "5.1.2"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "9.3.0",
     "@nrwl/jest": "9.3.0",
     "@nrwl/node": "9.3.0",
+    "@nrwl/react": "9.3.0",
     "@nrwl/workspace": "9.3.0",
     "@types/cheerio": "^0.22.18",
     "@types/jest": "25.1.4",
@@ -52,6 +57,13 @@
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "9.3.0",
+    "@nrwl/web": "9.3.0",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@testing-library/react": "9.4.0",
+    "@types/react-router-dom": "5.1.3"
   }
 }
