--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "document-register-element": "1.13.1",
     "fs": "0.0.1-security",
     "natural": "^2.1.5",
     "node-fetch": "^2.6.0",
-    "xml2js": "^0.4.23",
-    "document-register-element": "1.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "react-table": "^7.2.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "9.3.0",
