--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "cheerio": "^1.0.0-rc.3",
     "document-register-element": "1.13.1",
     "fs": "0.0.1-security",
@@ -39,17 +40,25 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@nrwl/cypress": "9.3.0",
     "@nrwl/eslint-plugin-nx": "9.3.0",
     "@nrwl/jest": "9.3.0",
     "@nrwl/node": "9.3.0",
     "@nrwl/react": "9.3.0",
+    "@nrwl/web": "9.3.0",
     "@nrwl/workspace": "9.3.0",
+    "@testing-library/react": "9.4.0",
     "@types/cheerio": "^0.22.18",
     "@types/jest": "25.1.4",
     "@types/natural": "^0.6.3",
     "@types/node": "~8.9.4",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/react-table": "^7.0.19",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
@@ -58,13 +67,6 @@
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.3.0",
-    "@nrwl/web": "9.3.0",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@types/react-router-dom": "5.1.3"
+    "typescript": "~3.8.3"
   }
 }
