--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@foodmedicine/health-site-scraper": [
         "libs/health-site-scraper/src/index.ts"
       ],
-      "@foodmedicine/article-parser": ["libs/article-parser/src/index.ts"]
+      "@foodmedicine/article-parser": ["libs/article-parser/src/index.ts"],
+      "@foodmedicine/components": ["libs/components/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
