--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "natural": "^2.1.5",
     "node-fetch": "^2.6.0",
     "react": "16.12.0",
+    "react-collapsible": "^2.8.0",
     "react-dom": "16.12.0",
+    "react-motion": "^0.5.2",
     "react-router-dom": "5.1.2",
     "react-table": "^7.2.0",
     "xml2js": "^0.4.23"
