--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "lib": ["es2019", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "@foodmedicine/interfaces": ["libs/interfaces/src/index.ts"],
