--- a/nx.json
+++ b/nx.json
@@ -14,7 +14,12 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e"
+        ]
       }
     }
   },
@@ -45,9 +50,14 @@
     },
     "table-frontend-e2e": {
       "tags": [],
-      "implicitDependencies": ["table-frontend"]
+      "implicitDependencies": [
+        "table-frontend"
+      ]
     },
     "word-explorer": {
+      "tags": []
+    },
+    "api": {
       "tags": []
     }
   }
