--- a/package.json
+++ b/package.json
@@ -38,6 +38,16 @@
     "synonyms": "^1.0.1",
     "util": "^0.12.3",
     "wordnet": "^0.1.2",
+    "command-line-args": "^5.1.1",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^3.23.1",
+    "http-status-codes": "^1.4.0",
+    "module-alias": "^2.2.2",
+    "morgan": "^1.10.0",
+    "winston": "^3.2.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
@@ -45,11 +55,29 @@
     "@nrwl/jest": "9.3.0",
     "@nrwl/node": "9.3.0",
     "@nrwl/react": "9.3.0",
+    "@types/command-line-args": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.6",
+    "@types/find": "^0.2.1",
+    "@types/helmet": "0.0.47",
+    "@types/jasmine": "^3.5.10",
+    "@types/jsonfile": "^6.0.0",
+    "@types/morgan": "^1.9.1",
+    "@types/node": "~8.9.4",
+    "@types/supertest": "^2.0.9",
+    "find": "^0.3.0",
+    "fs-extra": "^9.0.1",
+    "jasmine": "^3.5.0",
+    "jsonfile": "^6.0.1",
+    "supertest": "^4.0.2",
+    "ts-node": "~7.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.8.3",
     "@nrwl/workspace": "9.3.0",
     "@types/cheerio": "^0.22.18",
     "@types/jest": "25.1.4",
     "@types/natural": "^0.6.3",
-    "@types/node": "~8.9.4",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
     "dotenv": "6.2.0",
@@ -58,9 +86,6 @@
     "jest": "25.2.3",
     "prettier": "2.0.4",
     "ts-jest": "25.2.1",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.8.3",
     "cypress": "^4.1.0",
     "@nrwl/cypress": "9.3.0",
     "@nrwl/web": "9.3.0",
