--- a/package.json
+++ b/package.json
@@ -51,47 +51,48 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@nrwl/cypress": "9.3.0",
     "@nrwl/eslint-plugin-nx": "9.3.0",
+    "@nrwl/express": "^9.4.3",
     "@nrwl/jest": "9.3.0",
     "@nrwl/node": "9.3.0",
     "@nrwl/react": "9.3.0",
+    "@nrwl/web": "9.3.0",
+    "@nrwl/workspace": "9.3.0",
+    "@testing-library/react": "9.4.0",
+    "@types/cheerio": "^0.22.18",
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
     "@types/find": "^0.2.1",
     "@types/helmet": "0.0.47",
     "@types/jasmine": "^3.5.10",
+    "@types/jest": "25.1.4",
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.1",
-    "@types/node": "~8.9.4",
-    "@types/supertest": "^2.0.9",
-    "find": "^0.3.0",
-    "fs-extra": "^9.0.1",
-    "jasmine": "^3.5.0",
-    "jsonfile": "^6.0.1",
-    "supertest": "^4.0.2",
-    "ts-node": "~7.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.8.3",
-    "@nrwl/workspace": "9.3.0",
-    "@types/cheerio": "^0.22.18",
-    "@types/jest": "25.1.4",
     "@types/natural": "^0.6.3",
+    "@types/node": "~8.9.4",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
+    "find": "^0.3.0",
+    "fs-extra": "^9.0.1",
+    "jasmine": "^3.5.0",
     "jest": "25.2.3",
+    "jsonfile": "^6.0.1",
     "prettier": "2.0.4",
+    "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.3.0",
-    "@nrwl/web": "9.3.0",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@types/react-router-dom": "5.1.3"
+    "ts-node": "~7.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.8.3"
   }
 }
