--- a/package.json
+++ b/package.json
@@ -33,23 +33,32 @@
     "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23",
     "document-register-element": "1.13.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2",
-    "util": "^0.12.3"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
+    "util": "^0.12.3",
+    "express": "4.17.1"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "9.3.0",
-    "@nrwl/jest": "9.3.0",
-    "@nrwl/node": "9.3.0",
-    "@nrwl/react": "9.3.0",
-    "@nrwl/workspace": "9.3.0",
+    "@nrwl/cypress": "9.4.3",
+    "@nrwl/eslint-plugin-nx": "9.4.3",
+    "@nrwl/express": "9.4.3",
+    "@nrwl/jest": "9.4.3",
+    "@nrwl/node": "9.4.3",
+    "@nrwl/react": "9.4.3",
+    "@nrwl/web": "9.4.3",
+    "@nrwl/workspace": "9.4.3",
+    "@testing-library/react": "10.0.4",
     "@types/cheerio": "^0.22.18",
     "@types/jest": "25.1.4",
     "@types/natural": "^0.6.3",
     "@types/node": "~8.9.4",
+    "@types/react": "16.9.35",
+    "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
@@ -59,12 +68,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "~3.8.3",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.3.0",
-    "@nrwl/web": "9.3.0",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@types/react-router-dom": "5.1.3"
+    "@types/express": "4.17.0"
   }
 }
