--- a/package.json
+++ b/package.json
@@ -33,19 +33,13 @@
     "natural": "^2.1.5",
     "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23",
-    "document-register-element": "1.13.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0",
-    "util": "^0.12.3",
-    "express": "4.17.1"
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "synonyms": "^1.0.1",
     "util": "^0.12.3",
-    "wordnet": "^0.1.2",
-    "xml2js": "^0.4.23"
+    "express": "4.17.1",
+    "synonyms": "^1.0.1",
+    "wordnet": "^0.1.2"
   },
   "devDependencies": {
     "@nrwl/cypress": "9.4.3",
